Need to fix borders to align better

--- a/styles.css
+++ b/styles.css
@@ -184,3 +184,11 @@ li a:hover, li a:focus {
   background-size: cover;
   background-position: center-top;
 }
+
+/**--- Pricing Grid ---**/
+
+.holberton_school-icon-check {
+	font-size: 28px;
+	padding-top: 1.25rem;
+}
+
